test/corpus/basics.txt
================================================================================
Let binding
================================================================================

let id = \x -> x

--------------------------------------------------------------------------------

(source_file
  (let_binding
    name: (identifier)
    body: (lambda
      params: (identifier)
      body: (variable
        (identifier)))))

================================================================================
Let binding with multiple params
================================================================================

let zero = \f x -> x

--------------------------------------------------------------------------------

(source_file
  (let_binding
    name: (identifier)
    body: (lambda
      params: (identifier)
      params: (identifier)
      body: (variable
        (identifier)))))

================================================================================
Eval block with beta reduction
================================================================================

eval id_zero :
  id zero
  =b> zero

--------------------------------------------------------------------------------

(source_file
  (eval_block
    name: (identifier)
    initial: (application
      (variable
        (identifier))
      (variable
        (identifier)))
    (reduction_step
      operator: (step_operator)
      term: (variable
        (identifier)))))

================================================================================
Conf block
================================================================================

conf omega :
  (\x -> x x) (\x -> x x)
  =b> (\x -> x x) (\x -> x x)

--------------------------------------------------------------------------------

(source_file
  (conf_block
    name: (identifier)
    initial: (application
      (paren_term
        (lambda
          params: (identifier)
          body: (application
            (variable
              (identifier))
            (variable
              (identifier)))))
      (paren_term
        (lambda
          params: (identifier)
          body: (application
            (variable
              (identifier))
            (variable
              (identifier))))))
    (reduction_step
      operator: (step_operator)
      term: (application
        (paren_term
          (lambda
            params: (identifier)
            body: (application
              (variable
                (identifier))
              (variable
                (identifier)))))
        (paren_term
          (lambda
            params: (identifier)
            body: (application
              (variable
                (identifier))
              (variable
                (identifier)))))))))

================================================================================
All step operators
================================================================================

eval steps :
  x
  =a> x
  =b> x
  =e> x
  =d> x
  =n> x
  =p> x
  =*> x
  =~> x
  =n*> x
  =p*> x

--------------------------------------------------------------------------------

(source_file
  (eval_block
    name: (identifier)
    initial: (variable
      (identifier))
    (reduction_step
      operator: (step_operator)
      term: (variable (identifier)))
    (reduction_step
      operator: (step_operator)
      term: (variable (identifier)))
    (reduction_step
      operator: (step_operator)
      term: (variable (identifier)))
    (reduction_step
      operator: (step_operator)
      term: (variable (identifier)))
    (reduction_step
      operator: (step_operator)
      term: (variable (identifier)))
    (reduction_step
      operator: (step_operator)
      term: (variable (identifier)))
    (reduction_step
      operator: (step_operator)
      term: (variable (identifier)))
    (reduction_step
      operator: (step_operator)
      term: (variable (identifier)))
    (reduction_step
      operator: (step_operator)
      term: (variable (identifier)))
    (reduction_step
      operator: (step_operator)
      term: (variable (identifier)))))

================================================================================
Line comment
================================================================================

-- this is a comment
let id = \x -> x

--------------------------------------------------------------------------------

(source_file
  (line_comment)
  (let_binding
    name: (identifier)
    body: (lambda
      params: (identifier)
      body: (variable
        (identifier)))))

================================================================================
Step operators with normal form modifiers
================================================================================

eval nf :
  x
  =b:w> x
  =b:s> x
  =b:h> x
  =n:w> x

--------------------------------------------------------------------------------

(source_file
  (eval_block
    name: (identifier)
    initial: (variable (identifier))
    (reduction_step
      operator: (step_operator)
      term: (variable (identifier)))
    (reduction_step
      operator: (step_operator)
      term: (variable (identifier)))
    (reduction_step
      operator: (step_operator)
      term: (variable (identifier)))
    (reduction_step
      operator: (step_operator)
      term: (variable (identifier)))))
